# mynotes

./: .gitignore  notebooks.code-workspace  openai_tutorial.ipynb  pyproject.toml
notebooks/: openai_tutorial.ipynb
